--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -7,12 +7,14 @@
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 2rem;
     color: var(--primary-color);
+    line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -20,30 +22,37 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* "text-transform: uppercase" deixa todas as letras maiusculas */
 h1{
-    font-size: 5.5rem;
+    font-size: 6rem;
     text-transform: uppercase; 
 }
 
 h2{
-    font-size: 5rem;
+    font-size: 6rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 1.2;
 }
 
 h3{
-    font-size: 4.5rem;
+    font-size: 5rem;
 }
 
 h4{
-    font-size: 4rem;
+    font-size: 4.5rem;
 }
 
 h5{
-    font-size: 3.5rem;
+    font-size: 4rem;
 }
 
 h6{
-    font-size: 3rem;
+    font-size: 3.5rem;
 }
 
 a{
     text-decoration: none;
+}
+
+p {
+    margin-bottom: 3rem;
 }
