--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -56,3 +56,32 @@ a{
 p {
     margin-bottom: 3rem;
 }
+.responsive-table {
+    overflow: hidden ;
+    overflow-y: auto;
+}
+
+/*border-collapse: collapse = cola bordas*/
+table {
+    min-width: 360px;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table caption{
+    font-style: italic;
+    font-size: 1.6rem;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+table td, table th {
+    white-space: nowrap;
+    padding: 1rem;
+    text-align: left;
+    border: 0.1rem solid var(--light-gray-color)
+}
+
+tfoot td, table th {
+    background: var(--light-gray-color);
+}
